// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utilities: Image ImageCircle renders 1`] = `
<Fragment>
  <h2
    id="image-circle"
  >
    Image circle
  </h2>
  <p>
    To make your image a perfect circle add 
    <CodeTags
      code=".img-circle"
      type="secondary"
    />
    .
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <img
      alt="A deer in the sunset"
      className="img-circle mx-auto d-block"
      src="https://picsum.photos/200?image=790"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Utilities: Image ImageFluid renders 1`] = `
<Fragment>
  <h2
    id="image-fluid"
  >
    Image fluid
  </h2>
  <p>
    <CodeTags
      code=".img-fluid"
      type="secondary"
    />
     makes your images responsive by forcing the picture to scale with its parent.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <img
      alt="A rocky landscape with a white goat surrounded by trees."
      className="img-fluid"
      src="https://picsum.photos/1000/250?image=937"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Utilities: Image ImageRounded renders 1`] = `
<Fragment>
  <h2
    id="image-rounded"
  >
    Image rounded
  </h2>
  <p>
    If you want to display your images with rounded corners just add 
    <CodeTags
      code=".img-rounded"
      type="secondary"
    />
     to your image
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <img
      alt="A mountainous landscape at sunset with a person jumping in the foreground."
      className="img-rounded mx-auto d-block"
      src="https://picsum.photos/200?image=770"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Utilities: Image ImageThumbnail renders 1`] = `
<Fragment>
  <h2
    id="image-thumbnail"
  >
    Image thumbnail
  </h2>
  <p>
    <CodeTags
      code=".img-thumbnail"
      type="secondary"
    />
     adds a small border around the image and adds some padding to give the image a frame.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <img
      alt="A woman in a forest taking a photo facing the camera."
      className="img-thumbnail mx-auto d-block"
      src="https://picsum.photos/200?image=823"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Utilities: Image renders 1`] = `
<DocContainer>
  <p
    className="lead"
  >
    Use our image utilties to modify how they are displayed or work when resized.
  </p>
  <ImageFluid />
  <ImageRounded />
  <ImageCircle />
  <ImageThumbnail />
</DocContainer>
`;
